# indemn-os

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install-cli.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: getting-started.md  white-paper.md
docs/architecture/: associates.md  authentication.md  deployments.md  entity-framework.md  eval-framework.md  infrastructure.md  integrations.md  observability.md  overview.md  realtime.md  rules-and-auto.md  security.md  watches-and-wiring.md
docs/guides/: adding-associates.md  adding-deployments.md  adding-entities.md  adding-integrations.md  adding-watches.md  development.md  domain-modeling.md
harnesses/_base/: Dockerfile  pyproject.toml
harnesses/_base/harness_common/: __init__.py  attention.py  backend.py  cli.py  interaction.py  jwt_auth.py  rate_limit.py  runtime.py  sanitize.py  thread_id.py
harnesses/_base/harness_common/tests/: test_backend_isolation.py  test_cli_per_call_env.py  test_jwt_auth.py  test_sanitize.py  test_thread_id.py
harnesses/async-deepagents/: Dockerfile  agent.py  completion_logic.py  cron_runner.py  main.py  pyproject.toml  trace_helpers.py
harnesses/chat-deepagents/: Dockerfile  agent.py  main.py  pyproject.toml  session.py
harnesses/chat-deepagents/tests/: conftest.py  test_agent.py  test_chat_acts_as.py  test_chat_correlation_propagation.py  test_chat_deployment_context.py  test_chat_jwt_validation.py  test_chat_origin_validation.py  test_chat_parameter_schema.py  test_chat_rate_limit.py  test_close_frame_on_unhandled_error.py  test_connect_message_extension.py  test_deployment_session_start.py  test_phase4_prompt.py  test_phase4_runnable_config.py  test_phase4_session_compose.py
harnesses/voice-deepagents/: Dockerfile  agent.py  assistant.py  llm_adapter.py  main.py  pyproject.toml  session.py  tools.py
harnesses/voice-deepagents/tests/: conftest.py  test_checkpointer_wiring.py  test_llm_adapter.py  test_phase4_prompt.py  test_session_loads_from_room_metadata.py  test_token_streaming.py  test_tools.py  test_voice_env_vars.py  test_voice_events_drain.py  test_voice_runnable_config.py  test_voice_systemmessages.py
harnesses/voice-frontdoor/: Dockerfile  pyproject.toml  railway.json
harnesses/voice-frontdoor/harness/: __init__.py  app.py  jwt_auth.py  main.py  rate_limit.py  sessions.py
harnesses/voice-frontdoor/tests/: conftest.py  test_acts_as_gate.py  test_cors_preflight.py  test_deployment_status.py  test_frontdoor_worker_handoff.py  test_health.py  test_interaction_creation.py  test_jwt_auth.py  test_jwt_factory.py  test_livekit_dispatch.py  test_origin_validation.py  test_parameter_schema.py  test_rate_limit.py  test_resume_flow.py  test_sessions_body_parsing.py  test_sessions_skeleton.py  test_success_response.py
indemn_os/: pyproject.toml
indemn_os/src/indemn_os/: __init__.py  actor_commands.py  attention_commands.py  audit_commands.py  auth_commands.py  bulk_commands.py  bulk_monitor.py  client.py  diagnose_commands.py  entity_commands.py  eval_commands.py  events_commands.py  init_commands.py  integration_commands.py  interaction_commands.py  lookup_commands.py  main.py  org_commands.py  platform_commands.py  queue_commands.py  report_commands.py  role_commands.py  rule_commands.py  runtime_commands.py  skill_commands.py  trace_commands.py  types.py
kernel/: config.py  context.py  db.py  queue_processor.py  schema_validation.py  seed.py
kernel/api/: _filter_safelist.py  admin_routes.py  app.py  assistant.py  auth_routes.py  bootstrap.py  bulk.py  context_profile.py  deployment_routes.py  diagnose_routes.py  direct_invoke.py  errors.py  eval_routes.py  events.py  health.py  human_review.py  integration_routes.py  interaction.py  lookup_routes.py  meta.py  org_lifecycle.py  queue_routes.py  registration.py  rule_routes.py  serialize.py  skill_routes.py  trace_routes.py  webhook.py  websocket.py
kernel/auth/: audit.py  jwt.py  middleware.py  password.py  rate_limit.py  session_manager.py  token.py
kernel/capability/: __init__.py  aggregations.py  auto_classify.py  entity_resolve.py  fetch_new.py  registry.py  stale_check.py
kernel/changes/: boundary.py  collection.py  hash_chain.py
kernel/cli/: actor_commands.py  app.py  audit_commands.py  bulk_commands.py  bulk_monitor.py  client.py  entity_commands.py  events_commands.py  integration_commands.py  lookup_commands.py  org_commands.py  platform_commands.py  queue_commands.py  report_commands.py  role_commands.py  rule_commands.py  skill_commands.py
kernel/entity/: base.py  computed.py  definition.py  exposed.py  factory.py  flexible.py  indexes.py  migration.py  save.py  state_machine.py
kernel/eval/: __init__.py  check_engine.py
kernel/integration/: adapter.py  credentials.py  dispatch.py  registry.py  resolver.py  rotation.py
kernel/message/: bus.py  dispatch.py  emit.py  event_metadata.py  idempotency.py  mongodb_bus.py  reprocess.py  schema.py
kernel/observability/: correlation.py  logging.py  tracing.py
kernel/rule/: engine.py  lookup.py  schema.py  validation.py
kernel/scoping/: org_scoped.py  platform.py
kernel/skill/: generator.py  integrity.py  schema.py
kernel/temporal/: activities.py  client.py  worker.py  workflows.py
kernel/watch/: cache.py  evaluator.py  scope.py  validation.py
kernel_entities/: __init__.py  actor.py  attention.py  brand_assets.py  deployment.py  integration.py  organization.py  role.py  runtime.py  session.py  surface_config.py  trace.py
rubrics/: company-enricher.json  intelligence-extractor.json  meeting-classifier.json  proposal-hydrator.json  slack-classifier.json  touchpoint-synthesizer.json
schemas/surface_configs/: README.md  livekit.schema.json  prompt-kit.schema.json
scripts/: bootstrap_ai_404_deployments.py  migrate_content_size_hints.py  migrate_relationship_integrity.py  setup-cli.sh
tests/: conftest.py
tests/integration/: test_associate_processing.py  test_attention_lifecycle.py  test_auth_flow.py  (+13 more)
ui/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+165 files in other folders)
