[project]
name = "indemn-kernel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.26,<1.28",
    "motor>=3.3,<3.6",
    "pymongo>=4.6,<4.8",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "temporalio>=1.6",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "boto3>=1.34",
    "orjson>=3.10",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "croniter>=2.0",
    "stripe>=10.0",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
    "rapidfuzz>=3.9",
    "inflect>=7.0",
    "langsmith>=0.1",
    "indemn-os",
]

[project.scripts]
indemn = "indemn_os.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
indemn-os = { path = "indemn_os", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["kernel", "kernel_entities"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
