[project]
name = "indemn-os"
version = "0.1.0"
description = "Indemn OS CLI — the universal interface for the insurance operating system"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "orjson>=3.10",
    "pydantic>=2.7",
]

[project.scripts]
indemn = "indemn_os.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/indemn_os"]
