[project]
name = "chat-deepagents-harness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.1",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-google-vertexai>=2.0",
    "langchain>=0.3",
    "langgraph-checkpoint>=2.0",
    "langgraph-checkpoint-mongodb>=2.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "websockets>=13.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
