[project]
name = "voice-deepagents-harness"
version = "0.1.0"
description = "Voice harness for Indemn OS — LiveKit Agents + Gemini + indemn CLI tool surface."
requires-python = ">=3.12,<3.13"
dependencies = [
    # LiveKit Agents framework + plugins
    "livekit-agents>=1.0.0",
    "livekit-plugins-google>=1.0.0",  # Gemini LLM
    "livekit-plugins-deepgram>=1.0.0",  # STT
    "livekit-plugins-cartesia>=1.0.0",  # TTS
    "livekit-plugins-silero>=1.0.0",  # VAD
    "livekit-plugins-turn-detector>=1.0.0",  # Turn detector model
    "livekit-plugins-noise-cancellation>=1.0.0",  # Krisp noise cancellation
    # Google Cloud (for Vertex Gemini auth)
    "google-auth>=2.40",
    "google-cloud-aiplatform>=1.149",
    # Misc
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # Indemn OS shared
    # harness_common from /app/harness_common (mounted at build time)
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "assistant", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
