[project]
name = "voice-deepagents-harness"
version = "0.2.0"
description = "Voice harness for Indemn OS — LiveKit Agents transport over the canonical deepagents agent (same code path as chat + async)."
requires-python = ">=3.12,<3.13"
dependencies = [
    # Same deepagents/LangChain stack as chat + async
    "deepagents>=0.1",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-google-vertexai>=2.0",
    "langgraph-checkpoint>=2.0",
    "langgraph-checkpoint-mongodb>=0.3",
    "motor>=3.5",
    # LiveKit Agents framework + plugins
    "livekit-agents>=1.0.0",
    "livekit-plugins-google>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-turn-detector>=1.0.0",
    # Google Cloud (Vertex AI auth shared with the runtime LLM init)
    "google-auth>=2.40",
    "google-cloud-aiplatform>=1.149",
    # Misc
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    # harness_common is mounted at build time (from /app/harness_common in Docker)
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
