[project]
name = "voice-frontdoor-harness"
version = "0.1.0"
description = "Voice frontdoor for Indemn OS — POST /sessions HTTP endpoint, JWT validation, LiveKit room creation + AgentDispatch. Part of AI-407 Phase 2B (Option C two-services model per design §10.3 + §15.2)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "pyjwt[crypto]>=2.8",
    "jsonschema>=4.20",
    "httpx>=0.27",
    "livekit-api>=0.5",
    "bson>=0.5",
    "boto3>=1.34",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.uv.workspace]
members = ["../_base/harness_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
